                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 10-12-2004 fixed: [ 1080520 ] web interface: unqueing doesn't work - thanks to re.solve + BombrMan
  - 10-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 10-12-2004 updated: Italian language file (Thnx to kotix)
  - 10-12-2004 fixed: [ 1069833 ] white no longer triggers osd.
  - 09-12-2004 added: [ 1063544 ] Full LED Controll within the xbmc GUI, thanks to GeminiServer.
  - 09-12-2004 added: [ 1067203 ] GUI Contrast Control for Xenium-LCD, thanks to GreenGiant.
  - 09-12-2004 added: [ 1065952 ] Disable Internet Lookups option, thanks to kraqh3d.
  - 09-12-2004 added: [ 1081938 ] Updated strings.xml files to single-line format, thanks to slacker.
  - 09-12-2004 fixed: Issue with autorun videos/music (strings mix up)
  - 09-12-2004 added: Skin language version.  Currently set at v1.2.  XBMC will not load any skin
                      that doesn't have a <version>1.2</version> tag in it's skin.xml
                      It will also not allow such skins in the settings spin control.
                      If a current skin is not of the required version on bootup, it will use the default (Project                       Mayhem) skin, and if this is also not suitable, it will invoke the Fatal Error Handler.
  - 09-12-2004 fixed: Small graphical glitch in the Fatal Error Handler (it wasn't rendering all the text available)
  - 09-12-2004 added: SF patch for mouse + keyboard in gamecontroller ports
  - 08-12-2004 changed: settings, added category "View Options" for my programs
  - 08-12-2004 changed: a dummy time is displayed in the video osd when calibrating